Opened 12 years ago
Closed 12 years ago
#4269 closed defect (fixed)
flac: assertion error with fuzzed file
| Reported by: | tholin | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
The attached file sometimes cause an assertion error. It's non-deterministic and happens about 30% of the time. Never happens in gdb or valgrind.
$ ffmpeg -i assertion_abort.flac ffmpeg version N-69116-g7b32856 Copyright (c) 2000-2015 the FFmpeg developers built on Jan 16 2015 21:07:54 with gcc 4.8.3 (Gentoo 4.8.3 p1.1, pie-0.5.9) configuration: --prefix=/home/cocobo/repository/mpv-build_vanilla_debug/build_libs --enable-static --disable-shared --enable-gpl --enable-avresample --enable-debug=gdb --disable-doc --disable-optimizations --disable-stripping libavutil 54. 17.100 / 54. 17.100 libavcodec 56. 20.100 / 56. 20.100 libavformat 56. 19.100 / 56. 19.100 libavdevice 56. 4.100 / 56. 4.100 libavfilter 5. 8.100 / 5. 8.100 libavresample 2. 1. 0 / 2. 1. 0 libswscale 3. 1.101 / 3. 1.101 libswresample 1. 1.100 / 1. 1.100 libpostproc 53. 3.100 / 53. 3.100 Assertion index > -0x20000000 failed at /home/cocobo/repository/mpv-build_vanilla_debug/ffmpeg/libavcodec/parser.c:167 Aborted
Attachments (1)
Change History (2)
by , 12 years ago
| Attachment: | assertion_abort.flac added |
|---|
comment:1 by , 12 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in c4d85fc23c100f7a27d9bad710eb153214868e27